acp-workforce-portal/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acp-workforce-portal
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: acp-workforce-portal
